--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,20 +1,1 @@
-body {
-  align-items: center;
-  background: #000;
-  color: #e44d26;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: center;
-  font-family: sans-serif;
-  margin: auto;
-  width: 100%;
-}
-
-body h1 {
-  background-color: #fafafa;
-  border-radius: 5px;
-  font-size: 30px;
-  padding: 30px;
-}
-
+body{align-items:center;background:#000;color:#e44d26;display:flex;flex-direction:column;height:100vh;justify-content:center;font-family:sans-serif;margin:auto;width:100%}body h1{background-color:#fafafa;border-radius:5px;font-size:30px;padding:30px}
